[package]
name = "Bastion"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = "0.32.1"

#instructions for "cargo build"
[[bin]]
name = "view"
path = "src/view.rs"

[[bin]]
name = "delete"
path = "src/delete.rs"

[[bin]]
name = "insert"
path = "src/insert.rs"

[[bin]]
name = "common"
path = "src/common.rs"
